errors.log
Starting Metro Bundler
Android node_modules/expo-router/entry.js ▓▓▓▓░░░░░░░░░░░░ 28.0% (160/336)
Android node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓░░░░░░░░ 52.2% (531/735)
Android node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓░░░░░░ 65.6% ( 842/1143)
Android node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓░░░░ 78.1% (1278/1515)
Android node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓░░ 90.5% (1595/1677)
Android Bundling failed 18421ms node_modules/expo-router/entry.js (1807 modules)
SyntaxError: SyntaxError: /home/expo/workingdir/build/app/oauth-native-callback.tsx: 'return' outside of function. (125:2)

[0m [90m 123 |[39m
 [90m 124 |[39m   [90m// Show loading screen while processing OAuth callback[39m
[31m[1m>[22m[39m[90m 125 |[39m   [36mreturn[39m (
 [90m     |[39m   [31m[1m^[22m[39m
 [90m 126 |[39m     [33m<[39m[33mView[39m style[33m=[39m{{ 
 [90m 127 |[39m       flex[33m:[39m [35m1[39m[33m,[39m 
 [90m 128 |[39m       justifyContent[33m:[39m [32m'center'[39m[33m,[39m [0m
SyntaxError: /home/expo/workingdir/build/app/oauth-native-callback.tsx: 'return' outside of function. (125:2)

[0m [90m 123 |[39m
 [90m 124 |[39m   [90m// Show loading screen while processing OAuth callback[39m
[31m[1m>[22m[39m[90m 125 |[39m   [36mreturn[39m (
 [90m     |[39m   [31m[1m^[22m[39m
 [90m 126 |[39m     [33m<[39m[33mView[39m style[33m=[39m{{ 
 [90m 127 |[39m       flex[33m:[39m [35m1[39m[33m,[39m 
 [90m 128 |[39m       justifyContent[33m:[39m [32m'center'[39m[33m,[39m [0m
    at constructor (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:363:19)
    at TypeScriptParserMixin.raise (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6609:19)
    at TypeScriptParserMixin.parseReturnStatement (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13055:12)
    at TypeScriptParserMixin.parseStatementContent (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12716:21)
    at TypeScriptParserMixin.parseStatementContent (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9469:18)
    at TypeScriptParserMixin.parseStatementLike (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12685:17)
    at TypeScriptParserMixin.parseModuleItem (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12662:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13235:36)
    at TypeScriptParserMixin.parseBlockBody (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13228:10)
    at TypeScriptParserMixin.parseProgram (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12541:10)
    at TypeScriptParserMixin.parseTopLevel (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12531:25)
    at TypeScriptParserMixin.parse (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:14410:10)
    at TypeScriptParserMixin.parse (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10086:18)
    at parse (/home/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:14423:26)
    at parser (/home/expo/workingdir/build/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/home/expo/workingdir/build/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/home/expo/workingdir/build/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/home/expo/workingdir/build/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at evaluateSync (/home/expo/workingdir/build/node_modules/gensync/index.js:251:28)
    at sync (/home/expo/workingdir/build/node_modules/gensync/index.js:89:14)
    at stopHiding - secret - don't use this - v1 (/home/expo/workingdir/build/node_modules/@babel/core/lib/errors/rewrite-stack-trace.js:47:12)
    at Object.transformSync (/home/expo/workingdir/build/node_modules/@babel/core/lib/transform.js:42:76)
    at parseWithBabel (/home/expo/workingdir/build/node_modules/@expo/metro-config/build/transformSync.js:75:18)
    at transformSync (/home/expo/workingdir/build/node_modules/@expo/metro-config/build/transformSync.js:54:16)
    at Object.transform (/home/expo/workingdir/build/node_modules/@expo/metro-config/build/babel-transformer.js:118:58)
    at transformJSWithBabel (/home/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:470:47)
    at Object.transform (/home/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:585:12)
    at Object.transform (/home/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/transform-worker.js:175:23)
    at transformFile (/home/expo/workingdir/build/node_modules/metro/src/DeltaBundler/Worker.flow.js:57:36)
    at Object.transform (/home/expo/workingdir/build/node_modules/metro/src/DeltaBundler/Worker.flow.js:33:10)
    at execFunction (/home/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:149:17)
    at execHelper (/home/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:137:5)
    at execMethod (/home/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:140:5)
    at process.messageListener (/home/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:44:7)
    at process.emit (node:events:518:28)
    at emit (node:internal/child_process:950:14)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
Build failed

npx expo export:embed --eager --platform android --dev false exited with non-zero code: 1